# Technical-Analyst

./: .gitignore  AI_MODEL_INTEGRATION.md  BCS_DEFAULT_TOKEN.md  BCS_PROVIDER.md  MOBILE_UPDATE.md  README.md  mobile-update.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260518_0001_initial_models.py  20260518_0002_add_engine_to_instruments.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  analysis_signal.py  candle.py  indicator_value.py  instrument.py
backend/app/repositories/: candles.py  indicators.py  instruments.py
backend/app/schemas/: __init__.py  analysis.py  candle.py  indicator.py  instrument.py  levels.py  quote.py  scanner.py  signal.py  workspace.py
backend/app/services/: __init__.py
backend/app/services/analysis/: __init__.py  levels_engine.py  scanner_engine.py  signal_engine.py  target_engine.py
backend/app/services/indicators/: __init__.py  base.py  calculation_service.py  candle_frame.py  momentum.py  registry.py  trend.py  volatility.py  volume.py
backend/app/services/market_data/: __init__.py  base.py  moex_provider.py  sync_service.py  timeframe_service.py  tradingview_provider.py
backend/app/tasks/: __init__.py  calculate_indicators.py  sync_market_data.py
backend/app/tests/: test_indicators.py  test_moex_provider.py  test_quotes.py  test_repositories.py  test_signals.py  test_timeframe_service.py
docs/: ARCHITECTURE.md  (+1 more)
(+141 files in other folders)
