[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "technical-analyst-backend"
version = "0.1.0"
description = "Local FastAPI backend for technical analysis research."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "fastapi>=0.111,<1.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "pydantic>=2.7,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
